kubespray/hezner1/gateway-traefik.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: global-gateway
  namespace: gateway-namespace
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      port: 8000 # Matches Traefik's internal 'web' port (8000)
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 8443 # Matches Traefik's internal 'websecure' port (8443)
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: s4v3-net-tls # You'll need to create this Secret later
      allowedRoutes:
        namespaces:
          from: All
